try to fix layout bug in safari

--- a/src/components/Board/BigBoard/BigBoard.module.css
+++ b/src/components/Board/BigBoard/BigBoard.module.css
@@ -1,6 +1,7 @@
 .bigBoard {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
   grid-gap: 1em;
   justify-content: center;
 }
