--- a/src/components/Board/SmallBoard/SmallBoard.module.css
+++ b/src/components/Board/SmallBoard/SmallBoard.module.css
@@ -1,6 +1,7 @@
 .smallBoard {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
   grid-gap: 3px;
   justify-content: center;
 }
